# preintegration-external-prior

./: .gitignore  CMakeLists.txt  README.md  package.xml  parse-and-plot-bias-output.py  run.launch  vicon_bias_gt_init.txt  vicon_in_imu_frame.txt  vicon_lm_full.txt  vicon_other_prior_noises.txt  vicon_position_only.txt
data/: data_vicon.txt  data_vicon_2.txt  leica_full.txt  leica_full_quat.txt  leica_skip40.txt  leica_skip40_imu_body_old.txt  leica_skip40_quat.txt  vicon_quat.txt
src/: main.cpp
