<?xml version="1.0"?>
<package format="2">
  <name>preint_extpos_test</name>
  <version>0.1.0</version>
  <description>
    hello
  </description>

  <author>hello</author>
  <maintainer email="asdf@asdf.com">asdf</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  
</package>